# m365-wrapped

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: METRICS.md  PRIVACY.md  SETUP.md
src/m365_wrapped/: auth.py  cli.py  config.py  demo.py  output.py
src/m365_wrapped/graph/: __init__.py  client.py  reports.py
src/m365_wrapped/metrics/: __init__.py  aggregate.py  models.py
src/m365_wrapped/render/: __init__.py  cards.py  grid.py  html.py  theme.py
src/m365_wrapped/render/templates/: card.svg.j2  page.html.j2
tests/: test_aggregate.py  test_auth.py  test_client.py  test_demo.py  test_render.py
