[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "m365-wrapped"
version = "0.1.0"
description = "Spotify Wrapped, but for your Microsoft 365 tenant. Shareable, read-only usage stat cards."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Wintive" }]
dependencies = [
  "httpx>=0.27",
  "msal>=1.28",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "jinja2>=3.1",
  "pyyaml>=6.0",
]
# Cards are rendered SVG -> PNG via `rsvg-convert` (system package: librsvg2-bin /
# `brew install librsvg`). No headless browser required. The Docker image ships it.

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
m365-wrapped = "m365_wrapped.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"m365_wrapped.render" = ["templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py312"
